@@ -74,14 +74,34 @@ info_parse_node (char *string, int newlines_okay)
   /* Check for (FILENAME)NODENAME. */
   if (*string == '(')
     {
+      int bcnt;
+      int bfirst;
+      
       i = 0;
       /* Advance past the opening paren. */
       string++;
 
-      /* Find the closing paren. */
-      while (string[i] && string[i] != ')')
-        i++;
+      /* Find the closing paren. Handle nested parens correctly. */
+      for (bcnt = 0, bfirst = -1; string[i]; i++)
+	{
+	  if (string[i] == ')')
+	    {
+	      if (bcnt == 0)
+		{
+		  bfirst = -1;
+		  break;
+		}
+	      else if (!bfirst)
+		bfirst = i;
+	      bcnt--;
+	    } 
+	  else if (string[i] == '(')
+	    bcnt++;
+	}
 
+      if (bfirst >= 0)
+	i = bfirst;
+      
       /* Remember parsed filename. */
       saven_filename (string, i);
 
