@@ -1,3 +1,10 @@
+2008-10-05  Sergey Poznyakoff  <gray@gnu.org.ua>
+
+	* info/info-utils.c (info_parse_node): Correctly handle nested
+	parentheses.
+	* info/nodes.c (info_get_node): If no file buffer is found, try to
+	load man page.  Report an error if that fails as well.
+
 2008-09-26  Sergey Poznyakoff  <gray@gnu.org.ua>
 
 	* makeinfo/sectioning.c (get_sectioning_number): Use
